# self-avoiding-walk

./: .gitignore  Cargo.toml  Cross.toml
src/: config.rs  grid.rs  lib.rs  main.rs
